--- a/api/package.json
+++ b/api/package.json
@@ -19,9 +19,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
-    "express-validators": "^1.0.4",
+    "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^2.0.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.16.3",
