--- a/api/package.json
+++ b/api/package.json
@@ -25,5 +25,8 @@
     "passport-local": "^1.0.0",
     "pg": "^8.16.3",
     "prisma": "^6.19.0"
+  },
+  "dependencies": {
+    "date-fns": "^4.1.0"
   }
 }
