--- a/api/package.json
+++ b/api/package.json
@@ -27,6 +27,7 @@
     "prisma": "^6.19.0"
   },
   "dependencies": {
-    "date-fns": "^4.1.0"
+    "date-fns": "^4.1.0",
+    "multer": "^2.0.2"
   }
 }
